--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 <div id="mainContent" class="hidden">
   <div class="tables-container" id="tablesContainer"></div>
   <div class="floating-status">
-    <h3>Billed Tables</h3>
+    <h3>Booked Tables</h3>
     <div id="statusList"></div>
-    <h4>Recently Cleared</h4>
+    <h4>Billed Table</h4>
     <div id="clearedList"></div>
     <button id="resetBtn">Reset</button>
   </div>
